Fix mobile menu overlapping Portal popup
fixes #784

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -467,7 +467,7 @@ body:not(.gh-head-open) .gh-burger:hover .gh-burger-inner::after {
         right: 0;
         bottom: 0;
         left: 0;
-        z-index: 9999999;
+        z-index: 3999999;
         overflow-y: scroll;
     }
     .gh-head-open #gh-head .gh-head-inner {
